--- a/week2/homeworkw2d1.html
+++ b/week2/homeworkw2d1.html
@@ -1,29 +1,105 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="../week2/assets/stylesheets/standard.css" type="text/css">
-<link rel="stylesheet" href="../week2/assets/stylesheets/normalize.css" type="text/css">
+	<!-- Link or embed syles here -->
+	<title>HomeWorkw2d1</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="../week2/assets/stylesheets/standard.css" type="text/css">
+  <link rel="stylesheet" href="../week2/assets/stylesheets/normalize.css" type="text/css">
+  <link href="https://fonts.googleapis.com/css2?family=Tangerine|Source+Sans+Pro&display=swap" rel="stylesheet">
+  <style type="text/css">
+		
+  /* @page { size: 8.5in 11in; margin-left: 0.79in; margin-right: 0.39in; margin-top: 0.39in; margin-bottom: 0.39in }
+		p { margin-bottom: 0.1in; font-family: "Arial", "Helvetica", sans-serif; line-height: 115%; background: transparent }
+		h2 { margin-top: 0.14in; margin-bottom: 0.08in; font-family: "Arial", "Helvetica", sans-serif; font-size: 18pt; font-weight: bold; background: transparent; page-break-after: avoid }
+		a:link { color: #000080; so-language: zxx; background: transparent; text-decoration: underline }
+		a:visited { color: #800000; so-language: zxx; background: transparent; text-decoration: underline } */
+  </style>
+  
 </head>
 <body>
+  <div class="topnav">
+    <a class="active" href="#home">Logo</a>
+    <a href="#https://wwww.amazon.com">Products</a>
+    <a href="#music">Music</a>
+    <a href="#play">Play</a>
+    <a href="contact.html">Connect</a>
+    <a href="about.html">About</a>
+    <a class="icon" href="https://www.amazon.com">
+    <img src="assets/images/shopping-cart-icon.svg" name="Cart1" align="bottom" width="15" height="15" border="1"/>
+    </a>
+    <a class="icon" href="https://www.google.com/">
+      <font color="#ffffff">
+        <img src="assets/images/Search-icon.png" name="Search1" align="bottom" width="15" height="15" border="1"/>
+      </font>
+    </a>
+  </div>  
 
-<div class="topnav">
-  <a class="active" href="#home">Logo</a>
-  <a href="#products">Products</a>
-  <a href="#music">Music</a>
-  <a href="#play">Play</a>
-  <a href="#connect">Connect</a>
-  <a href="#about">About</a>
-  <input type="text" placeholder="Search..">
-  <a href="https://www.w3schools.com/howto/howto_css_searchbar.asp">Search</a>
-</div>
 
-<div style="padding-left:16px">
-  <h2>Top Navigation Example</h2>
-  <p>Some content..</p>
-</div>
+<h2><span style="display: inline-block; border: none; padding: 0in">Top
+Navigation Example</span></h2>
+<p><br/>
+<br/>
 
+</p>
+<p><br/>
+<br/>
+
+</p>
+<p><br/>
+<br/>
+
+</p>
+<p><br/>
+<br/>
+
+</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+eiusmod tempor incididunt ut labore et dolore magna aliqua.
+Parturient montes nascetur ridiculus mus mauris vitae ultricies leo
+integer. Non diam phasellus vestibulum lorem sed risus ultricies.
+Viverra justo nec ultrices dui sapien eget mi proin. Amet nulla
+facilisi morbi tempus iaculis urna. Mattis enim ut tellus elementum
+sagittis vitae et leo. Vel eros donec ac odio tempor. Et netus et
+malesuada fames ac turpis egestas sed tempus. Ultricies integer quis
+auctor elit sed vulputate. Nibh praesent tristique magna sit. Amet
+venenatis urna cursus eget nunc.</p>
+<p><br/>
+  <br/>
+<p><p><img src="assets/images/programming.gif" alt="Programmer" style="float:right;width:42px;height:42px;">We aim to ease your development work.</p> Quis enim lobortis scelerisque fermentum. Arcu bibendum at varius
+vel pharetra vel. Et malesuada fames ac turpis egestas. Vestibulum
+sed arcu non odio euismod lacinia at. Sed vulputate mi sit amet
+mauris commodo. Tellus molestie nunc non blandit massa enim nec dui.
+Pellentesque habitant morbi tristique senectus et netus et malesuada.
+Risus quis varius quam quisque id diam vel quam elementum. Massa
+sapien faucibus et molestie ac feugiat sed lectus vestibulum. Et
+malesuada fames ac turpis egestas integer eget. Arcu odio ut sem
+nulla pharetra diam sit amet. Aenean vel elit scelerisque mauris. Sed
+id semper risus in. Massa tincidunt dui ut ornare lectus sit amet est
+placerat.</p>
+<p><br/>
+  <br/>
+<p>Pellentesque habitant morbi tristique senectus et netus et
+malesuada fames. Leo in vitae turpis massa sed elementum tempus. Nec
+ultrices dui sapien eget mi. Sed lectus vestibulum mattis
+ullamcorper. Nulla malesuada pellentesque elit eget. Eu augue ut
+lectus arcu bibendum at. Nunc lobortis mattis aliquam faucibus purus
+in. Sit amet commodo nulla facilisi. Bibendum est ultricies integer
+quis auctor elit. Et netus et malesuada fames.</p>
+<p><br/>
+  <br/>
+<p>Ullamcorper eget nulla facilisi etiam dignissim diam quis enim.
+Ornare aenean euismod elementum nisi quis eleifend quam. Venenatis a
+condimentum vitae sapien. Elementum nibh tellus molestie nunc non
+blandit massa enim nec. Mattis pellentesque id nibh tortor id.
+Facilisis gravida neque convallis a cras semper. Rhoncus urna neque
+viverra justo nec ultrices dui. Condimentum mattis pellentesque id
+nibh tortor id aliquet. Nascetur ridiculus mus mauris vitae. Et leo
+duis ut diam quam. Etiam erat velit scelerisque in dictum non
+consectetur. Id cursus metus aliquam eleifend mi in nulla posuere.
+Amet consectetur adipiscing elit ut aliquam purus.</p>
+<p style="margin-bottom: 0in; line-height: 100%"><br/>
+
+</p>
 </body>
 </html>
-
-    
