--- a/week2/hm2w2d3.html
+++ b/week2/hm2w2d3.html
@@ -112,7 +112,7 @@ Amet consectetur adipiscing elit ut aliquam purus.</p>
     	</div>
     	<div class="col-xs-12 col-sm-4">
     	    <p><img class="img-fluid" src="assets/images/programming.gif" alt="Programmer" style="float:right;width:42px;height:42px;"></p>
-            <p> So you can meet friends to relax or get other work done.</p>
+            <p> Collect the data on your items. Choose item descriptions including any related warranty items.</p>
     	</div>
     	<div class="col-xs-12 col-sm-4">
     	    <img class="img-fluid" src="assets/images/chaircats1.jpg">
