--- a/week2/contact.html
+++ b/week2/contact.html
@@ -3,10 +3,79 @@
 
 <head>
   <title> Our Contact Page</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="../week2/assets/stylesheets/standard.css" type="text/css">
+  <link rel="stylesheet" href="../week2/assets/stylesheets/normalize.css" type="text/css">
+  <link href="https://fonts.googleapis.com/css2?family=Tangerine|Source+Sans+Pro&display=swap" rel="stylesheet">
+  <!-- Bootstrap CDN -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <!-- Animate.css framework CDN -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+  <!-- use local css -->
+  <link rel="stylesheet" type="text/css" href="main.css">
+  <style>
+    h2 {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+    }
+  </style>
 </head>
 
 <body>
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
+  <!-- Bootstrap Navbar -->
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Dropdown
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Inventory Tracking</a>
+          <a class="dropdown-item" href="#">Item Management</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Settings</a>
+          <a class="dropdown-item" href="contact.html">Contact</a>
+          <a class="dropdown-item" href="about.html">About</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Reports</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
+<!-- Banner using Bootstrap  -->
+<div class="jumbotron-fluid text-center">
+  <h1 class="animated fadeInDown"> Good Inventory Tracker Co.
+      <!-- Button using Bootstrap  -->
+      <div class="order-button text-center">
+          <a href="hm2w2d3.html" class="btn btn-primary">Home</a>
+       </div>
+  </h1>
+</div>
+<!-- 
 <h2>Contact Form</h2>
 
 <form action="contact.html">
@@ -22,9 +91,52 @@
   <label for="comment">Comments:</label><br>
   <input type="text" id="comment" name="comment" value="Please comment here" maxlength="1020" size="50"><br>
   <input type="submit" value="Submit">
-</form> 
+</form>  -->
 
-<p>If you click the "Submit" button, will be taken to the contact page.</p>
-
+<div class="container">
+  <h2>Contact Form</h2>
+  <form>
+    <div class="form-group">
+      <label for="email">Email:</label>
+      <input type="email" class="form-control" id="email" placeholder="Enter email">
+    </div>
+    <div class="form-group">
+      <label for="uname">Name:</label>
+      <input type="text" class="form-control" id="uname" placeholder="John Smith">
+    </div>
+    <div class="form-group">
+      <label for="inputdefault">Comments</label>
+      <input class="form-control" id="inputdefault" type="text">
+    </div>
+    <!-- <div class="form-group">
+      <label for="comments">Comments:</label>
+      <input type="email" class="form-control" id="comments" placeholder="Please tell us what you think.">
+    </div>
+    <div class="form-group">
+      <label for="pwd">Password:</label>
+      <input type="password" class="form-control" id="pwd" placeholder="Enter password">
+    </div> -->
+    <div class="checkbox">
+      <label><input type="checkbox"> Remember me</label>
+    </div>
+    <button type="submit" class="btn btn-default">Submit</button>
+  </form>
+</div>
+<!-- Footer using BootStrap  -->
+<footer class="container-fluid">
+  <div class="row">
+    <div class="col-md-4">© Good Inventory Tracker Co. 2020 </div>
+    <div class="col-md-4">
+      <ul class="nav nav-pills">
+        <li><a href="contact.html">Contact Us &#124; </a></li>
+        <li><a href="https://www.google.com">Get Support &#124; </a></li>
+        <li><a href="#">Privacy Policy</a></li>
+      </ul>
+    </div>
+    <div class="col-md-4">
+      <p class="text-right"><a href="#">Follow Us</a></p>
+    </div>
+  </div>
+</footer>
 </body>
 </html>
