--- a/week2/homeworkw2d1.html
+++ b/week2/homeworkw2d1.html
@@ -23,7 +23,7 @@
     <a href="#https://wwww.amazon.com">Products</a>
     <a href="#music">Music</a>
     <a href="#play">Play</a>
-    <a href="contact.html">Connect</a>
+    <a href="contact.html">Contact</a>
     <a href="about.html">About</a>
     <a class="icon" href="https://www.amazon.com">
     <img src="assets/images/shopping-cart-icon.svg" name="Cart1" align="bottom" width="15" height="15" border="1"/>
