--- a/template.html
+++ b/template.html
@@ -3,7 +3,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../week2/assets/stylesheets/standard.css" type="text/css">
     <link rel="stylesheet" href="../week2/assets/stylesheets/normalize.css" type="text/css">
-    <meta charset="utf-8"> //include in the head
+    <meta charset="utf-8">
+         
+    <title></title>
     
 </head>
 
