--- a/week2/homeworkw2d1.html
+++ b/week2/homeworkw2d1.html
@@ -6,7 +6,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../week2/assets/stylesheets/standard.css" type="text/css">
   <link rel="stylesheet" href="../week2/assets/stylesheets/normalize.css" type="text/css">
+  <!-- use local css -->
+  <link rel="stylesheet" type="text/css" href="main.css">
   <link href="https://fonts.googleapis.com/css2?family=Tangerine|Source+Sans+Pro&display=swap" rel="stylesheet">
+  <!-- Bootstrap CDN -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  
   <style type="text/css">
 		
   /* @page { size: 8.5in 11in; margin-left: 0.79in; margin-right: 0.39in; margin-top: 0.39in; margin-bottom: 0.39in }
@@ -101,5 +106,21 @@ Amet consectetur adipiscing elit ut aliquam purus.</p>
 <p style="margin-bottom: 0in; line-height: 100%"><br/>
 
 </p>
+<!-- Footer using BootStrap  -->
+<footer class="container-fluid">
+  <div class="row">
+    <div class="col-md-4">© Good Inventory Tracker Co. 2020 </div>
+    <div class="col-md-4">
+      <ul class="nav nav-pills">
+        <li><a href="contact.html">Contact Us &#124; </a></li>
+        <li><a href="https://www.google.com">Get Support &#124; </a></li>
+        <li><a href="#">Privacy Policy</a></li>
+      </ul>
+    </div>
+    <div class="col-md-4">
+      <p class="text-right"><a href="#">Follow Us</a></p>
+    </div>
+  </div>
+</footer>
 </body>
 </html>
