w3d6 dom and function

--- a/week2/homeworkw2d1.html
+++ b/week2/homeworkw2d1.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<!-- Link or embed syles here -->
-	<title>HomeWorkw2d1</title>
+  <title>HomeWorkw2d1</title>
+  <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../week2/assets/stylesheets/standard.css" type="text/css">
   <link rel="stylesheet" href="../week2/assets/stylesheets/normalize.css" type="text/css">
