--- a/week3/DOM_TEST.html
+++ b/week3/DOM_TEST.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dom Test</title>
-    
+    <!-- Bootstrap CDN -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  
 </head>
 <body>
     <div>
@@ -45,7 +47,6 @@
         <h1>Section 2</h1>
     </section>
 </div> -->
-<script src="../assets/javascripts/classStuff.js">        
-</script>
+<script type="text/javascript" src="../assets/javascripts/classStuff.js"></script>
 </body>
 </html>
